@@ -13,7 +13,7 @@ disable_pod_coverage_tests = 1
 
 [Prereqs]
 BenchmarkAnything::Storage::Frontend::Tools = 0
-Tapper::Cmd = 5.0.5
+Tapper::Cmd = 5.0.8
 Tapper::Config = 5.0.2
 Tapper::Model = 5.0.1
 Tapper::Schema = 5.0.6
